nullaway_error_65A13FD6-C793-4B12-968A-E60D01C990AA.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-aop/src/main/java/org/springframework/aop/aspectj/annotation/ReflectiveAspectJAdvisorFactory.java:125: error: [NullAway] dereferenced expression aspectInstanceFactory is @Nullable
		Class<?> aspectClass = aspectInstanceFactory.getAspectMetadata().getAspectClass();
		                                            ^
    (see http://t.uber.com/nullaway )
